new proj/src/objects/GE_ES_Single_Org_Opportunity_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Total Amount (All Items)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Expected Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency_ISO_Code__c</fullName>
        <label>Currency ISO Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>History Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Single Org Opportunity History</relationshipLabel>
        <relationshipName>Single_Org_Opportunity_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Single Org Opportunity History</label>
    <nameField>
        <displayFormat>H-{000000000}</displayFormat>
        <label>Single Org Opportunity History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Single Org Opportunity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>